[package]
name = "warudo"
version = "0.1.0"
edition = "2024"
authors = ["Zuruuh <zuruh.dev@proton.me"]
rust-version = "1.86.0"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "string"] }
color-eyre = { version = "0.6.4", default-features = false }
derive_builder = "0.20.2"
futures = "0.3.31"
pathdiff = "0.2.3"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
  "sync",
  "time",
  "fs",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
watchexec-events = { version = "5.0.0", features = ["serde"] }

[profile.release]
opt-level = 3       # Maximum optimizations
lto = "fat"         # Full Link Time Optimization (better perf, slower compile)
codegen-units = 1   # Single codegen unit allows better optimizations
panic = "abort"     # Smaller binary and no stack unwind info
strip = false       # Keep symbols if needed for profiling (you can set to true)
debug = false       # Set to true if profiling/perf tools need debug info
incremental = false # Disable incremental for fully optimized builds
